--- a/apps/sv-web/src/app.html
+++ b/apps/sv-web/src/app.html
@@ -10,7 +10,10 @@
 		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body
+		data-sveltekit-preload-data="hover"
+		class="group/body overscroll-none font-sans text-foreground antialiased"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
